Revise e-portfolio content and section details
Updated content in the e-portfolio sections, including the introduction and project descriptions.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
       <h2>Welcome!</h2>
       <p>
         I'm Anas EL AMRANY, Computer Science Engineering Student at ENSEEIHT.<br>
-        Discover projects, skills, and academic achievements on this scrollable, interactive portfolio.
+        Explore this interactive portfolio to access my CVs in French and English, and watch my elevator pitch video.
+        This ePortfolio showcases my development in engineering, connects with professors and employers, and highlights my academic journey.
       </p>
     </div>
     <div class="hint">Click to see more</div>
@@ -243,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
