Revise Engineering Courses section content
Updated content in the Engineering Courses section to include specific projects and learning outcomes.

--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
     <div class="tab-content">
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Engineering Projects</h2>
-      <ul>
-        <li>Ada interactive multiplication tables tool</li>
-        <li>Project-based learning in modeling/simulation</li>
-        <li>Studies in algorithms, data structures, artificial intelligence</li>
-      </ul>
+      <p>
+        Developed an interactive Ada tool for practicing multiplication tables, emphasizing code quality and reliability. 
+        Learned data analysis and image processing in MATLAB, including histogram visualization and edge detection.
+        These experiences strengthened my programming fundamentals, attention to detail, and ability to apply theory to practical challenges.
+      </p>
+
     </div>
     <div class="hint">Click to see more</div>
   </div>
@@ -244,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
