Revise e-portfolio content and sections
Updated the content of the e-portfolio sections, including mobility preferences and additional details in the engineering and civic engagement sections.

--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Mobility &amp; Exchange</h2>
       <p>
-        Planning for potential international experiences or exchanges.<br>
-        Reflections on teamwork, adaptation, language, and global opportunities.
+       I have not completed a mobility yet. If given the opportunity, my preferred destinations would be China, Spain, or the UK, as each offers unique cultural experiences and opportunities for academic and personal growth.
       </p>
     </div>
     <div class="hint">Click to see more</div>
@@ -245,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
