Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
     <div class="tab-content">
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Civic Engagement</h2>
-      <ul>
-        <li>"King Kong Trial" theatre project</li>
-        <li>Climate mural, collaborative workshops</li>
-        <li>Participation in social, creative, and environmental initiatives</li>
-      </ul>
+      <p>
+        While I have not completed formal civic engagement hours yet, I have begun participating in collaborative events and debates focused on social and environmental responsibility. 
+        Activities like the King Kong trial, climate change workshops such as Fresque du Climat, and the "Picture a Scientist" cine debate have raised my awareness of key societal and scientific challenges. 
+        These experiences motivate me to contribute further to community projects that promote inclusion, sustainability, and equity.
+      </p>  
     </div>
     <div class="hint">Click to see more</div>
   </div>
@@ -244,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
