--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Engineering Projects</h2>
       <p>
-        Developed an interactive Ada tool for practicing multiplication tables, emphasizing code quality and reliability. 
-        Learned data analysis and image processing in MATLAB, including histogram visualization and edge detection.
+      <u1> 
+        <li>Developed an interactive Ada tool for practicing multiplication tables, emphasizing code quality and reliability.</li>
+        <li>Learned data analysis and image processing in MATLAB, including histogram visualization and edge detection.</li>
         These experiences strengthened my programming fundamentals, attention to detail, and ability to apply theory to practical challenges.
+      </u1>
       </p>
 
     </div>
@@ -210,10 +212,9 @@
     <div class="tab-content">
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Extracurricular Life</h2>
-      <ul>
-        <li>Participation in sports, clubs, and personal development</li>
-        <li>Teamwork, fitness, and interests beyond academics</li>
-      </ul>
+      <p>
+        My extracurricular involvement is still developing, but I am interested in joining student groups, sports, or technical clubs as I continue my studies. Participation outside the classroom helps build teamwork and leadership skills, and I am looking forward to exploring activities that match my interests and offer new experiences.
+      </p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
@@ -244,6 +245,7 @@
   </script>
 </body>
 </html>
+
 
 
 
