Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -224,11 +224,9 @@
     <div class="tab-content">
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Professional Growth</h2>
-      <ul>
-        <li>CV, career interests, and ambitions</li>
-        <li>Plans for internships, professional connections</li>
-        <li>Future areas in computer science</li>
-      </ul>
+      <p>
+        You can find my CV in PDF format attached to this tab. My primary career interests lie in computer science, particularly artificial intelligence and related emerging domains. In the future, I hope to gain experience in industry and potentially create my own startup company.
+      </p>
     </div>
     <div class="hint">Click to see more</div>
   </div>
@@ -245,6 +243,7 @@
   </script>
 </body>
 </html>
+
 
 
 
