--- a/index.html
+++ b/index.html
@@ -215,7 +215,11 @@
       <button class="close-btn" onclick="closeSection(event)" title="Close" aria-label="Close">&times;</button>
       <h2>Professional Growth</h2>
       <p>
-        You can find my CV in PDF format attached to this tab. My primary career interests lie in computer science, particularly artificial intelligence and related emerging domains. In the future, I hope to gain experience in industry and potentially create my own startup company.
+        You can view and download my CV in English:
+        <br>
+        <a href="CV_English.pdf" target="_blank">Download my CV (English)</a>
+        <br>
+        My primary career interests lie in computer science, particularly artificial intelligence and related emerging domains. In the future, I hope to gain experience in industry and potentially create my own startup company.
       </p>
     </div>
     <div class="hint">Click to see more</div>
@@ -233,3 +237,5 @@
   </script>
 </body>
 </html>
+
+
