Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
         I'm Anas EL AMRANY, Computer Science Engineering Student at ENSEEIHT.<br>
         Explore this interactive portfolio to access my CVs in French and English:
         <br>
-        <a href="CV_French.pdf" target="_blank">Download my CV (French)</a>
+        <a href="CV-Francais.pdf" target="_blank">Download my CV (French)</a>
         <br>
-        <a href="CV_English.pdf" target="_blank">Download my CV (English)</a>
+        <a href="CV-English.pdf" target="_blank">Download my CV (English)</a>
         <br>
         And watch my elevator pitch video.
         <br>
@@ -217,7 +217,7 @@
       <p>
         You can view and download my CV in English:
         <br>
-        <a href="CV_English.pdf" target="_blank">Download my CV (English)</a>
+        <a href="CV-English.pdf" target="_blank">Download my CV (English)</a>
         <br>
         My primary career interests lie in computer science, particularly artificial intelligence and related emerging domains. In the future, I hope to gain experience in industry and potentially create my own startup company.
       </p>
@@ -237,4 +237,5 @@
   </script>
 </body>
 </html>
+
 
